# surfbot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: config.yaml.example  feeds.yaml  format.md  preferences.md
doc/: arch.md  userstory.md
src/surfbot/: config.py  cycle.py  fetcher.py  kanboard.py  llm.py  main.py  state.py
